# ZAP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  xap.cpp
Core/: Camera.hpp  GlowMode.hpp  Level.hpp  LocalPlayer.hpp  Offsets.hpp  Player.hpp
Features/: Flickbot.hpp  Glow.hpp  Legitbot.hpp  Misc.hpp  Radar.hpp  Ragebot.hpp  Sense.hpp  Triggerbot.hpp
Math/: FloatVector2D.hpp  FloatVector3D.hpp  Matrix.hpp  QAngle.hpp  Resolver.hpp  Vector2D.hpp  Vector3D.hpp  Vector4D.hpp
Overlay/: AdvancedGUI.hpp  Font.hpp  Fontawesome.hpp  GUI.hpp  Overlay.hpp  Renderer.hpp  SenseFont.hpp
Utils/: Color.hpp  Config.hpp  ConfigManager.hpp  Conversion.hpp  Features.hpp  HitboxType.hpp  IniReader.h  InputManager.hpp  InputTypes.hpp  Memory.hpp  Themes.hpp  Weapons.hpp  XDisplay.hpp
imgui/: imconfig.h  imgui_draw.cpp  imgui_widgets.cpp
